<resources>
    <string name="update_app">Click this button to update system applications</string>
    <string name="update_app_text">System will reboot auto if applications update success</string>
    <string name="no_update_app_text">"check if any apk files in (/extsd/update_apk/) "</string>
    <string name="update_new_text">now system applications is the newest</string>
    <string name="update_mcu">Click this button to Update MCU</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="sure_update_mcu">Update mcu?</string>
    <string name="update_mcu_load">Load</string>
    <string name="update_mcu_start">Start</string>
    <string name="update_mcu_unlock">Unlock</string>
    <string name="update_mcu_data">Data</string>
    <string name="update_mcu_checksum">Checksum</string>
    <string name="update_mcu_reset">Reset</string>
    <string name="tag_name">UpdateManager</string>
    <string name="update_mcu_text">System will reboot auto if MCU update success.</string>
    <string name="source_not_exist">Source directory not exist</string>
    <string name="update_failed">Update failed</string>
    <string name="ext_disk">Micro SD1</string>
    <string name="ext_disk1">Micro SD1</string>
    <string name="ext_disk2">Micro SD2</string>
    <string name="u_disk">USB disk</string>
    <string name="calibrattion_text">press cross</string>
    <string name="install">"Install APK              (make sure path /extsd/apk/*.apk   shorcut.txt)"</string>
    <string name="install2">"Install APK inside       (make sure path /sdcard/apk/*.apk   shorcut.txt)"</string>
    <string name="start_install">"Auto Install APK Start： "</string>
    <string name="install_success">"　 Install APK Success"</string>
    <string name="install_failed">"　 Install APK Fail"</string>
    <string name="install_over">"Install APK Finished"</string>
    <string name="install_warning">Do not Quit when Installing APK.</string>
    <string name="no_files">No APK Files</string>
    <string name="product_setting">Factory setting</string>
    <string name="reak_setting">Parking brake setting</string>
    <string name="brake_setting">Parking brake setting</string>
    <string name="auxin_setting">AUX IN setting</string>
    <string name="dvd_setting">DVD setting</string>
    <string name="illumin_setting">Illumination setting</string>
    <string name="radio_setting">Radio setting</string>
    <string name="fan_setting">Fan setting</string>
    <string name="radio_region_setting">Radio region setting</string>
    <string name="car_support_setting">Car support setting</string>
    <string name="mcu_reset">Reset MCU to factory</string>
    <string name="mcu_secret_reset">Restore MCU safety setting</string>
    <string name="system_reset">Factory settings</string>
    <string name="radio_default">Recovery</string>
    <string name="radio_dec">-</string>
    <string name="radio_inc">+</string>
    <string name="listening_test">Listen</string>
    <string name="no_need_calibration">This Machine No Need Calibration!</string>
    <string name="input_code">Please input password</string>
    <string name="steering_wheel_control_settings_title">Steering wheel control settings</string>
    <string name="pannel_control_settings_title">Pannel control settings</string>
    <string name="download_warning">Don\'t power off when file is downloading</string>
    <string name="download_title">Download startup logo?</string>
    <string name="download_waiting">Downing,please wait...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="apply">Apply</string>
    <string name="download_success">Update succeeded,pleas restart to activate</string>
    <string name="download_fail">update failed</string>
    <string name="run_script">Run Script</string>
    <string name="app_name">File Manager</string>
    <string name="update_pro">Update Program</string>
    <string-array name="operation_array">
        <item>Copy</item>
        <item>Paste</item>
        <item>Cut</item>
        <item>Delete</item>
        
    </string-array>
    <string name="start">Start </string>
    <string name="operate_failed">You can\'t operate this directory</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="space_not_enough">Inner storage card have not enough space! Please clean storage card then update again.</string>
    <string name="total_space">Inner SD Card Total space:</string>
    <string name="micro_sd_total_space">Micro SD Card Total space:</string>
    <string name="udisd_total_space">U disk Total space:</string>
    <string name="available_space">Available space:</string>
    <string name="skip">Skip</string>
    <string name="replace">Replace</string>
    <string name="update_nav_text">Be careful to upgrade MCU! Please don\'t upgrade when you\'re driving. During upgrade, please don\'t ignition, power off, which may cause interrupt upgrade. Please wait until the upgrade is successful about 30min.</string>
    <string name="sure_update_nav">Upgrade \"%1$s\" need long time. Are you sure update now?</string>
    <string name="finded_update_nav">Found the upgrade file named \"%1$s\". Are you sure want to upgrade?</string>
    <string name="media_disk">Media Space</string>
    <string name="supper_dir">UP</string>
    <string name="sdcard_name">Local</string>
    <string name="sdcard1_name">SD</string>
    <string name="sdcard2_name">GPSCard</string>
    <string name="usbdisk1_name">USB1</string>
    <string name="usbdisk2_name">USB2</string>
    <string name="usbdisk3_name">USB3</string>
    <string name="usbdisk4_name">USB4</string>
    <string name="multi_select">MultiSelect</string>
    <string name="select_all">Select All</string>
    <string name="replace_file">The folder contains a file that named \"%1$s\". Do you want to replace the file?</string>
    <string name="no_space_title">Out of Disk Space</string>
    <string name="no_space">Out of current disk space. Can\'t accommodate the file named \"%1$s\", please free up enough space to operation.</string>
    <string name="choice_source_path">Please choose navi software source files folder</string>
    <string name="chose_file_name">You chose folder name is \"%1$s\"?</string>
    <string name="faulty_operation">Faulty operation</string>
    <string name="operation_error">Operation error</string>
    <string name="new_name">Please input new name</string>
    <string name="logo_settings_title">Logo Setting</string>
    <string name="reset_system_title">Restore system to factory settings</string>
    <string name="led_settings_title">LED settings</string>
    <string name="canbox_settings_manufacturer">Canbox manufacturer</string>
    <string name="canbox_settings_title">Canbox settings</string>
    <string name="canbox_settings_title1">Canbox settings</string>
    <string name="rds_settings_title">RDS settings</string>
    <string name="hide_app_title">Select apps to hide</string>
    <string name="screen_size_title">Select the size of screen</string>
    <string name="screen_size_reboot">Reset the screen size will reboot the system, do you want to continue?</string>
    <string name="update_mcu_title">Update MCU</string>
    <string name="navigation_choice_title">Set a navigation software</string>
    <string name="navigation_choice_summary">Select navigation software</string>
    <string name="navigation_auto_dispaux_title">Disable navigation automatic display on screen1</string>
    <string name="navigation_auto_dispaux_summary">Disable automatic display on screen1 while navigation is running in the background</string>
    <string name="factory_settings_title">Factory Settings</string>
    <string name="video_on_driving_title">Watching video</string>
    <string name="video_on_driving_summary">Allowed to watch video while driving ?</string>
    <string name="steering_wheel_control_settings_summary">Study the control function for the key on steering wheel</string>
    <string name="led_settings_summary">Select the panel LED color</string>
    <string name="ill_start_time_title">Auto illumination start at</string>
    <string name="ill_stop_time_title">Auto illumination stop at</string>
    <string name="auto_ill_title">Auto illumination</string>
    <string name="auto_ill_summary">Auto dim the screen and turn on the panel LED</string>
    <string name="update_android_title">Update Andorid</string>
    <string name="touch_sound_title">Touch and Key tone</string>
    <string name="navi_mix_title">Navigation sound</string>
    <string name="dynamic_back_track">Reversing track display</string>
    <string name="static_back_track">Rear view ruler</string>
    <string name="auto_play_music_title">Auto playing music</string>
    <string name="auto_play_music_summary">Allowed to play music automatically when USB or SD inserted</string>
    <string name="auto_switch_drak_mode">Auto switch to night mode when the light on</string>
    <string name="night_mode">Night mode</string>
    <string name="reverse_volume">Reversing volume</string>
    <string name="acc_delay_poweroff">Power off delay if ACC OFF</string>
    <string name="canbox_key_mode">Key mode</string>
    <string name="canbox_eq_mode">Amplifier mode</string>
    <string name="canbox_car_type">Car Type</string>
    <string name="canbox_car_type2">Car Type2</string>
    <string name="canbox_key_change">Key change</string>
    <string name="canbox_air">Air condition</string>
    <string name="canbox_front_door">Front door</string>
    <string name="canbox_rear_door">Rear door</string>
    <string name="audio_gain_title">Audio gain</string>
    <string name="reverse_mirror">Reversing X-Mirror</string>
	<string name="title_touch3_gesture_settings">Three-Finger gesture settings</string>
	<string name="title_touch3_switch">Turn on three-finger gesture</string>
	<string name="title_touch3_upkey">Up fling</string>
	<string name="title_touch3_downkey">Down fling</string>
    <string name="title_touch3_leftkey">Left fling</string>
    <string name="title_touch3_rightkey">Right fling</string>
    <string name="launcher_ui_title">Home App</string>
    <string name="reset_volume">Auto resumes volume after restarting</string>
    <string name="title_gps_monitor">GPS monitor</string>
    <string name="car_cell">Vehicle battery</string>
    <string name="car_cell_summary">Display the current battery voltage of the vehicle</string>
    <string name="car_info_screensaver">Car Info ScreenSaver</string>
    <string name="bt_cell">Bluetooth phone</string>
    <string name="bt_cell_summary">Display the phone battery power,signal strength</string>
    <string name="video_out">Video out</string>
    <string name="video_out_summary">OFF</string>
    <string name="car_amplifier_volume">The volume of car amplifier</string>
    <string name="temp_dis">Temperature display unit</string>
    <string name="mileage_unit">Mileage Unit</string>
    <string name="video_on_stop_title">Watching video while stop</string>
    <string name="video_on_stop_summary">Allowed to watch video while stop by GPS speed</string>
    <string name="canbox_door_voice">Voice notice if door open or close</string>
    <string name="canbox_front_radar_camera">Open front camera if show front radar</string>
    <string name="other">Other Settings</string>
		<string name="summary_ad_std_apply">After selecting, please click apply to save the settings and restart</string>
    <string name="title_ad_std">Set video channel standard</string>
    <string name="title_ad_channel_reverse">CH0: Reverse</string>
    <string name="title_ad_channel_auxin">CH1: AuxIn</string>
    <string name="title_ad_channel_dvd">CH2: DVD</string>
    <string name="title_ad_channel_fcam">CH3: F-CAM</string>
<string name="mic_type">Microphone type</string>
</resources>